fix horizontal scroll

--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -26,3 +26,7 @@ mat-form-field {
 .tradingview-widget-container {
     padding-bottom: 1em;
 }
+
+.widget-container {
+    height: 280px;
+}
